--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
         <nav>
             <ul>
-                <li><a href="#">Studio</a></li>
-                <li><a href="#">Portfolio</a></li>
+                <li><a href="studio.html">Studio</a></li>
+                <li><a href="portofolio.html">Portfolio</a></li>
                 <li><a href="#">Contacts</a></li>
             </ul>
         </nav>
