--- a/portofolio.html
+++ b/portofolio.html
@@ -6,6 +6,72 @@
         <title>Portofolio</title>
     </head>
 <body>
-    
+     <!--Header section-->
+     <header>
+        <div>
+            <a href="#"><p><span>Web</span>Studio</p></a>
+        </div>
+
+        <nav>
+            <ul>
+                <li><a href="studio.html">Studio</a></li>
+                <li><a href="portofolio.html">Portfolio</a></li>
+                <li><a href="#">Contacts</a></li>
+            </ul>
+        </nav>
+
+        <div><a href="mailto:info@devstudio.com">info@devstudio.com</a></div>
+        <div><a href="tel:+12127724150">+1 212-772-4150</a></div>
+    </header>
+     <!--Portiunea principala a paginii web-->
+
+     <main>
+        <!--First section-->
+        <section>
+            <ul>
+                <li>
+                    <button type="button">All</button>
+                </li>
+                <li>
+                    <button type="button">Web-sites</button>
+                </li>
+                <li>
+                    <button type="button">Apps</button>
+                </li>
+                <li>
+                    <button type="button">Design</button>
+                </li>
+                <li>
+                    <button type="button">Marketing</button>
+                </li>
+            </ul>
+        </section>
+
+        <!--Second section-->
+        <section>
+            <div>
+                <img src="./img/project1.jpg" alt="Technoduck web-site" width="322" />
+                <img src="./img/project2.jpg" alt="Poster New Orlean vs Golden Star Design" width="322" />
+                <img src="./img/project3.jpg" alt="Seafood Restaurant Apps" width="322" />
+                <img src="./img/project4.jpg" alt="Project Prime Marketing" width="322" />
+                <img src="./img/project5.jpg" alt="Project Boxes Apps" width="322" />
+                <img src="./img/project6.jpg" alt="Inspiration has no Borders Web-site" width="322" />
+                <img src="./img/project7.jpg" alt="Limited Edition Design" width="322" />
+                <img src="./img/project8.jpg" alt="Project LAB Marketing" width="322" />
+                <img src="./img/project9.jpg" alt="Growing Business Apps" width="322" />
+            </div>
+        </section>
+     </main>
+
+     <!--Footer section-->
+        <footer>
+
+            <a href="#"><p><span>Web</span>Studio</p></a>
+                <address>
+                    <p>695 Park Ave, NY 10065, USA</p>
+                    <div><a href="mailto:info@devstudio.com">info@devstudio.com</a></div>
+                    <div><a href="tel:+12127724150">+1 212-772-4150</a></div>
+                </address>
+            </footer>
 </body>
 </html>
