--- a/portofolio.html
+++ b/portofolio.html
@@ -4,30 +4,42 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Portofolio</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="./css/style.css"/>
     </head>
 <body>
      <!--Header section-->
-     <header>
-        <div>
+     <header class="header">
+        <div class="header__logo">
             <a href="#"><p><span>Web</span>Studio</p></a>
         </div>
 
-        <nav>
+        <nav class="header__navigation">
             <ul>
                 <li><a href="studio.html">Studio</a></li>
                 <li><a href="portofolio.html">Portfolio</a></li>
                 <li><a href="#">Contacts</a></li>
             </ul>
         </nav>
+        <adress class="header__info">
+            <ul>
+                <li>
+                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                </li>
+                <li>
+                    <a href="tel:+12127724150">+1 212-772-4150</a>
+                </li>
+            </ul>
+        </adress>
 
-        <div><a href="mailto:info@devstudio.com">info@devstudio.com</a></div>
-        <div><a href="tel:+12127724150">+1 212-772-4150</a></div>
     </header>
      <!--Portiunea principala a paginii web-->
 
      <main>
         <!--First section-->
-        <section>
+        <section >
             <ul>
                 <li>
                     <button type="button">All</button>
