--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
 
         <nav class="header__navigation">
             <ul>
-                <li><a href="studio.html">Studio</a></li>
+                <li><a href="#">Studio</a></li>
                 <li><a href="portofolio.html">Portfolio</a></li>
                 <li><a href="#">Contacts</a></li>
             </ul>
         </nav>
-        <adress class="header__info">
+        <div class="header__info">
             <ul>
                 <li>
                     <a href="mailto:info@devstudio.com">info@devstudio.com</a>
@@ -32,7 +32,7 @@
                     <a href="tel:+12127724150">+1 212-772-4150</a>
                 </li>
             </ul>
-        </adress>
+        </div>
 
     </header>
 
@@ -41,8 +41,8 @@
     <main>
         <!--First section-->
         <section>
-            <h1>EFFECTIVE SOLUTIONS FOR YOUR BUSINESS</h1>
-            <button type="button">Request our service</button>
+            <h1 class="title">EFFECTIVE SOLUTIONS FOR YOUR BUSINESS</h1>
+            <button class="head-button" type="button">Request our service</button>
         </section>
 
         <!--Second section-->
@@ -50,19 +50,19 @@
          <ul>
             <li>
                 <h3>ATTENTION TO DETAILS</h3>
-                <p>We go into all the details and processes of your business to develop a customized solution.</p>
+                <p class="describe">We go into all the details and processes of your business to develop a customized solution.</p>
             </li>
             <li>
                 <h3>PUNCTUALITY</h3>
-                <p>With us, you can feel safe and secure. An important principle of the company: respect your time and deadlines.</p>
+                <p class="describe">With us, you can feel safe and secure. An important principle of the company: respect your time and deadlines.</p>
             </li>
             <li>
                 <h3>PLANNING</h3>
-                <p>You will be able to observe and participate in every phase of solution development and implementation.</p>
+                <p class="describe">You will be able to observe and participate in every phase of solution development and implementation.</p>
             </li>
             <li>
                 <h3>MODERN TECHNOLOGIES</h3>
-                <p>We use innovative tools to solve assigned tasks. It's time to simplify work processes.</p>
+                <p class="describe">We use innovative tools to solve assigned tasks. It's time to simplify work processes.</p>
             </li>
          </ul>
         </section>
