--- a/portofolio.html
+++ b/portofolio.html
@@ -18,12 +18,12 @@
 
         <nav class="header__navigation">
             <ul>
-                <li><a href="studio.html">Studio</a></li>
+                <li><a href="#">Studio</a></li>
                 <li><a href="portofolio.html">Portfolio</a></li>
                 <li><a href="#">Contacts</a></li>
             </ul>
         </nav>
-        <adress class="header__info">
+        <div class="header__info">
             <ul>
                 <li>
                     <a href="mailto:info@devstudio.com">info@devstudio.com</a>
@@ -32,29 +32,29 @@
                     <a href="tel:+12127724150">+1 212-772-4150</a>
                 </li>
             </ul>
-        </adress>
+        </div>
 
     </header>
      <!--Portiunea principala a paginii web-->
 
      <main>
         <!--First section-->
-        <section >
+        <section class="btn" >
             <ul>
                 <li>
-                    <button type="button">All</button>
+                    <button class="btn__btn-1" type="button">All</button>
                 </li>
                 <li>
-                    <button type="button">Web-sites</button>
+                    <button class="btn__btn-2" type="button">Web-sites</button>
                 </li>
                 <li>
-                    <button type="button">Apps</button>
+                    <button class="btn__btn-3" type="button">Apps</button>
                 </li>
                 <li>
-                    <button type="button">Design</button>
+                    <button class="btn__btn-4" type="button">Design</button>
                 </li>
                 <li>
-                    <button type="button">Marketing</button>
+                    <button class="btn__btn-5" type="button">Marketing</button>
                 </li>
             </ul>
         </section>
