--- a/portofolio.html
+++ b/portofolio.html
@@ -17,7 +17,7 @@
         </div>
 
         <nav class="header__navigation">
-            <ul>
+            <ul class="header__navigation-list">
                 <li><a href="#">Studio</a></li>
                 <li><a href="portofolio.html">Portfolio</a></li>
                 <li><a href="#">Contacts</a></li>
