--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!--Header section-->
     <header class="header">
         <div class="header__logo">
-            <a href="#"><p><span>Web</span>Studio</p></a>
+            <a href="#"><p><span style="color:blue">Web</span>Studio</p></a>
         </div>
 
         <nav class="header__navigation">
@@ -47,22 +47,22 @@
 
         <!--Second section-->
         <section>        
-         <ul >
+         <ul class="description">
             <li>
-                <h3>ATTENTION TO DETAILS</h3>
-                <p class="describe">We go into all the details and processes of your business to develop a customized solution.</p>
+                <h3 class="description__title">ATTENTION TO DETAILS</h3>
+                <p class="description__1">We go into all the details and processes of your business to develop a customized solution.</p>
             </li>
             <li>
-                <h3>PUNCTUALITY</h3>
-                <p class="describe">With us, you can feel safe and secure. An important principle of the company: respect your time and deadlines.</p>
+                <h3 class="description__title">PUNCTUALITY</h3>
+                <p class="description__2">With us, you can feel safe and secure. An important principle of the company: respect your time and deadlines.</p>
             </li>
             <li>
-                <h3>PLANNING</h3>
-                <p class="describe">You will be able to observe and participate in every phase of solution development and implementation.</p>
+                <h3 class="description__title">PLANNING</h3>
+                <p class="descripton__3">You will be able to observe and participate in every phase of solution development and implementation.</p>
             </li>
             <li>
-                <h3>MODERN TECHNOLOGIES</h3>
-                <p class="describe">We use innovative tools to solve assigned tasks. It's time to simplify work processes.</p>
+                <h3 class="description__title">MODERN TECHNOLOGIES</h3>
+                <p class="description__4">We use innovative tools to solve assigned tasks. It's time to simplify work processes.</p>
             </li>
          </ul>
         </section>
@@ -89,14 +89,16 @@
         </section>
      </main>
         <!--Footer section-->
-        <footer>
-
-            <a href="#"><p><span>Web</span>Studio</p></a>
+        <footer class="footer">
+           <div class="footer__logo">
+            <a href="#"><p><span style="color:blue">Web</span>Studio</p></a>
+           </div>
             <address>
-                <p>695 Park Ave, NY 10065, USA</p>
-                <div><a href="mailto:info@devstudio.com">info@devstudio.com</a></div>
-                <div><a href="tel:+12127724150">+1 212-772-4150</a></div>
+                <p class="footer__address">695 Park Ave, NY 10065, USA</p>
+                <div class="footer__info"><a href="mailto:info@devstudio.com">info@devstudio.com</a></div>
+                <div class="footer__info"><a href="tel:+12127724150">+1 212-772-4150</a></div>
             </address>
         </footer>
 </body>
 </html>
+
