--- a/portofolio.html
+++ b/portofolio.html
@@ -13,7 +13,7 @@
      <!--Header section-->
      <header class="header">
         <div class="header__logo">
-            <a href="#"><p><span>Web</span>Studio</p></a>
+            <a href="#"><p><span style="color:blue">Web</span>Studio</p></a>
         </div>
 
         <nav class="header__navigation">
@@ -76,14 +76,15 @@
      </main>
 
      <!--Footer section-->
-        <footer>
-
-            <a href="#"><p><span>Web</span>Studio</p></a>
-                <address>
-                    <p>695 Park Ave, NY 10065, USA</p>
-                    <div><a href="mailto:info@devstudio.com">info@devstudio.com</a></div>
-                    <div><a href="tel:+12127724150">+1 212-772-4150</a></div>
-                </address>
-            </footer>
+     <footer class="footer">
+        <div class="footer__logo">
+         <a href="#"><p><span style="color:blue">Web</span>Studio</p></a>
+        </div>
+         <address>
+             <p class="footer__address">695 Park Ave, NY 10065, USA</p>
+             <div class="footer__info"><a href="mailto:info@devstudio.com">info@devstudio.com</a></div>
+             <div class="footer__info"><a href="tel:+12127724150">+1 212-772-4150</a></div>
+         </address>
+     </footer>
 </body>
 </html>
