--- a/portofolio.html
+++ b/portofolio.html
@@ -62,15 +62,15 @@
         <!--Second section-->
         <section>
             <div>
-                <img src="./img/project1.jpg" alt="Technoduck web-site" width="322" />
-                <img src="./img/project2.jpg" alt="Poster New Orlean vs Golden Star Design" width="322" />
-                <img src="./img/project3.jpg" alt="Seafood Restaurant Apps" width="322" />
-                <img src="./img/project4.jpg" alt="Project Prime Marketing" width="322" />
-                <img src="./img/project5.jpg" alt="Project Boxes Apps" width="322" />
-                <img src="./img/project6.jpg" alt="Inspiration has no Borders Web-site" width="322" />
-                <img src="./img/project7.jpg" alt="Limited Edition Design" width="322" />
-                <img src="./img/project8.jpg" alt="Project LAB Marketing" width="322" />
-                <img src="./img/project9.jpg" alt="Growing Business Apps" width="322" />
+                <img src="./images/project1.jpg" alt="Technoduck web-site" width="322" />
+                <img src="./images/project2.jpg" alt="Poster New Orlean vs Golden Star Design" width="322" />
+                <img src="./images/project3.jpg" alt="Seafood Restaurant Apps" width="322" />
+                <img src="./images/project4.jpg" alt="Project Prime Marketing" width="322" />
+                <img src="./images/project5.jpg" alt="Project Boxes Apps" width="322" />
+                <img src="./images/project6.jpg" alt="Inspiration has no Borders Web-site" width="322" />
+                <img src="./images/project7.jpg" alt="Limited Edition Design" width="322" />
+                <img src="./images/project8.jpg" alt="Project LAB Marketing" width="322" />
+                <img src="./images/project9.jpg" alt="Growing Business Apps" width="322" />
             </div>
         </section>
      </main>
