--- a/index.html
+++ b/index.html
@@ -93,11 +93,19 @@
            <div class="footer__logo">
             <a href="#"><p><span style="color:blue">Web</span>Studio</p></a>
            </div>
-            <address>
+            <address class="footer__address">
                 <p class="footer__address">695 Park Ave, NY 10065, USA</p>
-                <div class="footer__info"><a href="mailto:info@devstudio.com">info@devstudio.com</a></div>
-                <div class="footer__info"><a href="tel:+12127724150">+1 212-772-4150</a></div>
-            </address>
+                <div class="footer__address-info">
+                    <ul>
+                        <li>
+                            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                        </li>
+                        <li>
+                            <a href="tel:+12127724150">+1 212-772-4150</a>
+                        </li>
+                    </ul>
+                </div>
+
         </footer>
 </body>
 </html>
